--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 <body>
     
 
-<header>
-<h1>   RHAONY FERRAZ   </h1>
 
-</header>
 <nav>
    
     <a href="index2.html">Empregos</a>
@@ -29,7 +26,7 @@
 
  
 
-    <h3>
+    <h3>                               Rhaony Ferraz
          <article> 
           <picture>
             
