--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
  
 
-    <h3>                               Rhaony Ferraz
+    
+                               <h1>  Rhaony Ferraz </h1>
+          <h3>                     
          <article> 
           <picture>
             
