--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <nav>
    
+    <abbr title="Home"><a href="index.html"target="tela"><img src="Imagens01/home.png"alt="inicio"></a></abbr>
     <a href="index2.html">Empregos</a>
     <a href="index3.html">Educacional</a>
     <a href="index4.html">Habilidades</a>
@@ -27,7 +28,7 @@
  
 
     
-                               <h1>  Rhaony Ferraz </h1>
+                               <h1>  Rhaony Ferraz </h1><br>
           <h3>                     
          <article> 
           <picture>
