--- a/index3.html
+++ b/index3.html
@@ -13,6 +13,7 @@
     
 
 <nav>
+    <a href="index.html">Home</a>
     <a href="index2.html">Empregos</a>
     <a href="index3.html">Educacional</a>
     <a href="index4.html">Habilidades</a>
