--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav>
    
-    <abbr title="Home"><a href="index.html"target="tela"><img src="Imagens01/home.png"alt="inicio"></a></abbr>
+    <a href="index.html">Home</a>
     <a href="index2.html">Empregos</a>
     <a href="index3.html">Educacional</a>
     <a href="index4.html">Habilidades</a>
