--- a/index4.html
+++ b/index4.html
@@ -14,9 +14,10 @@
   
 
 <nav>
-    <a href="index2.html">Empregos</a>
-    <a href="index3.html">Educacional</a>
-    <a href="index4.html">Habilidades</a>
+   <a href="index.html">Home</a>
+   <a href="index2.html">Empregos</a>
+   <a href="index3.html">Educacional</a>
+   <a href="index4.html">Habilidades</a>
    
 </nav>
 
