--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav>
    
     <a href="index.html">Home</a>
-    <a href="index2.html">Empregos</a>
+    <a href="index2.html">Jobs</a>
     <a href="index3.html">Educacional</a>
     <a href="index4.html">Habilidades</a>
     
