--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
    
     <a href="index.html">Home</a>
     <a href="index2.html">Jobs</a>
-    <a href="index3.html">Educacional</a>
-    <a href="index4.html">Habilidades</a>
+    <a href="index3.html">Studies</a>
+    <a href="index4.html">Skills</a>
     
 </nav>
 <main> 
