--- a/index2.html
+++ b/index2.html
@@ -17,9 +17,9 @@
     
 <nav>
     <a href="index.html">Home</a>
-    <a href="index2.html">Empregos</a>
-    <a href="index3.html">Educacional</a>
-    <a href="index4.html">Habilidades</a>
+    <a href="index2.html">Jobs</a>
+    <a href="index3.html">Studies</a>
+    <a href="index4.html">Skills</a>
 </nav>
 
 
