--- a/index4.html
+++ b/index4.html
@@ -48,7 +48,7 @@
        <source media="(max-width: 350px )" srcset="img_job/cena_p.png" type="image/png">
        <source media="(max-width: 600px )" srcset="img_job/cena_m.png" type="image/png">
        <img src="img_job/cena_g.png" alt="imagem flexível"><br>
-    </picture> </h3>
+    </picture> </h3><br>
         <h1>Vários projetos.</h1>
 
         <div class="video">
