--- a/index2.html
+++ b/index2.html
@@ -26,17 +26,17 @@
 <main> 
     <article>
         <h1>
-        Gerente de Inovação, Marcelo Pasqua Ltda 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" >www.marcelopasqua.com </i></a></h1>
+        Gerente de Inovação, Marcelo Pasqua Ltda 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" >marcelopasqua.com </i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de projetos de blockchain NFT;
         <li> Reuniões semanais com a diretoria;
         <li> Elaboração de apresentações para investidores;
         <li> Implementação de novos sistemas de cibersegurança;
-        Criação de tokens. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">www.cryptorig.com.br </a></i></b></p><br>
+        Criação de tokens. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">cryptorig.com </a></i></b></p><br>
         
         <h1>
-        Diretor-CEO, Bridge Trade -Irlanda. 2018 - 2021 <i><a href="https://bridgetrade.biz/" target="_blank"rel="nofollow">www.bridgetrade.biz</i></a></h1>
+        Diretor-CEO, Bridge Trade -Irlanda. 2018 - 2021 <i><a href="https://bridgetrade.biz/" target="_blank"rel="nofollow">bridgetrade.com</i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de fluxo de projetos.
@@ -45,7 +45,7 @@
         <li> Análise de relatórios.</b></p><br>
 
         <h1>
-        Analista de rede, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">www.textiluniao.ind.br</i></a>
+        Analista de rede, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">textiluniao.com</i></a>
     </h1>
         <p>
 <ul type="disc"><b>
@@ -54,12 +54,12 @@
         <li> Implementação de novos sistemas.</b></p><br>
 
         <h1>
-        Estagiário, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">www.embreagemferraz.com.br</i></a></h1>
+        Estagiário, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">embreagemferraz.com</i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Reuniões semanais com a diretoria;
         <li> Implementação de novos sistemas.</b></p><br>
-    </article>
+    </article><hr>
     <section id="redes-sociais">
         <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/cv.png"alt="Resume"></a></abbr>
        <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/git.png"alt="git"></a></abbr>
