--- a/index3.html
+++ b/index3.html
@@ -45,7 +45,7 @@
              <ul type="disc"><b>
                  <li> Universidade Unifeg 2014-2017
                  <li> Coordenação do Projeto-Baja;
-                 <li> Mérito académico. https://youtube.com/watch?v=HtjnH3FAjNO&t=59s </b></p><br>
+                 <li> Mérito académico. https://youtube.com/watch?v=HtjnH3FAjNO&t=59s </b></p><br><hr>
         
                     <section id="redes-sociais">
                         <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/cv.png"alt="Resume"></a></abbr>
