--- a/index4.html
+++ b/index4.html
@@ -49,7 +49,7 @@
        <source media="(max-width: 600px )" srcset="img_job/cena_m.png" type="image/png">
        <img src="img_job/cena_g.png" alt="imagem flexível"><br>
     </picture> </h3><br>
-        <h1>Vários projetos.</h1>
+        <h1>Vários projetos.</h1><br>
 
         <div class="video">
 
