--- a/index2.html
+++ b/index2.html
@@ -29,35 +29,39 @@
         Gerente de Inovação, Marcelo Pasqua Ltda 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" >marcelopasqua.com </i></a></h1>
         <p>
 <ul type="disc"><b>
-        <li> Gerenciamento de projetos de blockchain NFT;
-        <li> Reuniões semanais com a diretoria;
-        <li> Elaboração de apresentações para investidores;
-        <li> Implementação de novos sistemas de cibersegurança;
-        Criação de tokens. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">cryptorig.com </a></i></b></p><br>
+        <li> Gerenciamento de projetos blockchain NFT.
+        <li> Reuniões semanais com a diretoria.
+        <li> Elaboração de apresentações para investidores.
+        <li> Implementação de novos sistemas de cibersegurança.
+        <li> Desenvolvimento de websites,
+        criação de token. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">cryptorig.com </a></i></b></p><br>
         
         <h1>
         Diretor-CEO, Bridge Trade -Irlanda. 2018 - 2021 <i><a href="https://bridgetrade.biz/" target="_blank"rel="nofollow">bridgetrade.com</i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de fluxo de projetos.
-        <li> nvio de remessas para o exterior;
-        <li> Revisão de cibersegurança e novas tecnologias;
-        <li> Análise de relatórios.</b></p><br>
+        <li> Elaboração de apresentações para investidores.
+        <li> Envio de remessas para o exterior.
+        <li> Revisão de cibersegurança e novas tecnologias.
+        <li> Desenvolvimento de websites.
+        <li> Análise de negócios.</b></p><br>
 
         <h1>
         Analista de rede, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">textiluniao.com</i></a>
     </h1>
         <p>
 <ul type="disc"><b>
-        <li> Gerenciamento de hardware e software;
-        <li> Reuniões semanais com a diretoria;
+        <li> Gerenciamento de hardware e software.
+        <li> Reuniões semanais com a diretoria.
         <li> Implementação de novos sistemas.</b></p><br>
 
         <h1>
         Estagiário, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">embreagemferraz.com</i></a></h1>
         <p>
 <ul type="disc"><b>
-        <li> Reuniões semanais com a diretoria;
+        <li> Gerenciamento de hardware e software.
+        <li> Reuniões semanais com a diretoria.
         <li> Implementação de novos sistemas.</b></p><br>
     </article><hr>
     <section id="redes-sociais">
