--- a/index4.html
+++ b/index4.html
@@ -81,7 +81,7 @@
           encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
         </div>
 
-    </article><br><hr>
+    </article><hr>
   
     <section id="redes-sociais">
         <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/cv.png"alt="Resume"></a></abbr>
