--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
 <main> 
     <article>
         <h1>
-        Gerente de Inovação, Marcelo Pasqua Ltda 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" >marcelopasqua.com </i></a></h1>
+        Gerente de Inovação, Marcelo Pasqua Ltda 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de projetos blockchain NFT.
@@ -34,10 +34,10 @@
         <li> Elaboração de apresentações para investidores.
         <li> Implementação de novos sistemas de cibersegurança.
         <li> Desenvolvimento de websites,
-        criação de token. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">cryptorig.com </a></i></b></p><br>
+        criação de token. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">cryptorig.com 🔗 </a></i></b></p><br>
         
         <h1>
-        Diretor-CEO, Bridge Trade -Irlanda. 2018 - 2021 <i><a href="https://bridgetrade.biz/" target="_blank"rel="nofollow">bridgetrade.com</i></a></h1>
+        Diretor-CEO, Bridge Trade -Irlanda. 2018 - 2021 <i><a href="https://bridgetrade.biz/" target="_blank"rel="nofollow">bridgetrade.com 🔗</i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de fluxo de projetos.
@@ -48,7 +48,7 @@
         <li> Análise de negócios.</b></p><br>
 
         <h1>
-        Analista de rede, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">textiluniao.com</i></a>
+        Analista de rede, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">textiluniao.com 🔗</i></a>
     </h1>
         <p>
 <ul type="disc"><b>
@@ -57,7 +57,7 @@
         <li> Implementação de novos sistemas.</b></p><br>
 
         <h1>
-        Estagiário, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">embreagemferraz.com</i></a></h1>
+        Estagiário, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">embreagemferraz.com 🔗</i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de hardware e software.
