--- a/indexcv.html
+++ b/indexcv.html
@@ -26,9 +26,9 @@
 <main> 
          <article> 
             <section id="redes-cv">
-                <img src="img_logo/br2.png" alt="">
-                <img src="img_logo/usa2.png" alt="">
-                <abbr title="SPANISH_RESUME"><a href="resume/Currículo.pdf" target="_blank"rel="nofollow"><img src="img_logo/Sp2.png" alt=""></abbr> 
+                <abbr title="portugues_RESUME"><a href="resume/portugues-resume -rhaony.pdf"target="_blank"rel="nofollow"><img src="img_logo/br2.png" alt=""></abbr> 
+                <abbr title="inglish_RESUME"><a href="resume/inglish-rhaony-resume.pdf"target="_blank"rel="nofollow"><img src="img_logo/usa2.png" alt=""></abbr> 
+                <abbr title="SPANISH_RESUME"><a href="resume/spanish-resume -rhaony (2).pdf"target="_blank"rel="nofollow"><img src="img_logo/Sp2.png" alt=""></abbr> 
 
                 
             </section>
