--- a/indexcv.html
+++ b/indexcv.html
@@ -26,11 +26,7 @@
 <main> 
          <article> 
             <section id="redes-cv">
-                <abbr title="portugues_RESUME"><a href="resume/portugues-resume -rhaony.pdf"target="_blank"rel="nofollow"><img src="img_logo/br2.png" alt=""></abbr> 
-                <abbr title="inglish_RESUME"><a href="resume/inglish-rhaony-resume.pdf"target="_blank"rel="nofollow"><img src="img_logo/usa2.png" alt=""></abbr> 
-                <abbr title="SPANISH_RESUME"><a href="resume/spanish-resume -rhaony (2).pdf"target="_blank"rel="nofollow"><img src="img_logo/Sp2.png" alt=""></abbr> 
-
-                
+                <abbr title=""><a href="resume/portugues-resume -rhaony.pdf"target="_blank"rel="nofollow"><img src="img_logo/br2.png" alt=""></abbr><abbr title=""><a href="resume/inglish-rhaony-resume.pdf"target="_blank"rel="nofollow"><img src="img_logo/usa2.png" alt=""></abbr>&nbsp&nbsp<abbr title=""><a href="resume/spanish-resume -rhaony (2).pdf"target="_blank"rel="nofollow"><img src="img_logo/Sp2.png" alt=""></abbr>
             </section>
             
          </article><hr>
