--- a/index3.html
+++ b/index3.html
@@ -50,7 +50,7 @@
              <ul type="disc"><b>
                  <li> Universidade Unifeg 2014-2017.
                  <li> Coordenação do Projeto-Baja.
-                 <li> Mérito acadêmico. <i> <a href="https://youtu.be/HtjnH3FAjN0" target="_blank"rel="nofollow">ProjetoBaja-youtube 🔗</a></i></b></p><br><hr>
+                 <li> Mérito acadêmico. <i> <a href="https://youtu.be/HtjnH3FAjN0" target="_blank"rel="nofollow">Baja-youtube 🔗</a></i></b></p><br><hr>
                  
                     <section id="redes-sociais">
                         <abbr title="Resume/CV"><a href="indexcv.html"target="tela"><img src="redes/cv.png"alt="Resume"></a></abbr>
