--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
 <main> 
     <article>
         <h1>
-        Gerente de Inovação, Marcelo Pasqua Ltda 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
+        Gerente de Inovação, Marcelo Pasqua. 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de projetos blockchain NFT.
