--- a/index5.html
+++ b/index5.html
@@ -64,7 +64,7 @@ textarea{height: 150px;}
         <abbr title="Github"><a href="http://github.com/rhaonyferraz"target="tela"><img src="redes/git.png"alt="git"></a></abbr>
         <abbr title="Linkedin"><a href="http://www.linkedin.com/in/rhaony-ferraz-5a181377/"target="tela"><img src="redes/in3.png"alt="in"></a></abbr>
         <abbr title="Meta-Verse"> <a href="https://www.oculus.com/profile/Rhoany_12?d=m"target="tela"><img src="redes/meta4.png"alt="meta"></a></abbr>
-        <abbr title="E-mail"><a href="index5.html"target="tela"><img src="redes/email.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
+        <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/email.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
         <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/wts3.png"alt="WhatsApp-Bot"></a></abbr>
      </section>
 </body>
