--- a/index5.html
+++ b/index5.html
@@ -37,7 +37,7 @@ textarea{height: 150px;}
    <section class="content">
 
      <div class="contato">
-              <br><h1> <b> Formulário De Contato </b></h1> 
+              <br><h1> <b> Formulário De Contato </b></h1> <hr><br>
 
               
 
@@ -49,7 +49,7 @@ textarea{height: 150px;}
 
             
           </form>
-
+         <hr>
           <h1>Este formulário php-html está finalizado porém está sem dominio,por isso pesso que encaminhe seu E-mail para 
             o endereço  rhaonyferraz@hotmail.com 
           </h1>
@@ -67,5 +67,9 @@ textarea{height: 150px;}
         <abbr title="rhaonyferraz@hotmail.com"><a href="index5.html"target="tela"><img src="redes/email.png"alt="rhaonyferraz@hotmail.com"></a></abbr>
         <abbr title="WhatsApp-ChatBot"><a href="https://web.whatsapp.com/send?phone=5511912990147"target="tela"><img src="redes/wts3.png"alt="WhatsApp-Bot"></a></abbr>
      </section>
+
+     <footer>
+        Site criado por Rhaony Ferraz &reg;
+    </footer>
 </body>
 </html>
