--- a/index5.html
+++ b/index5.html
@@ -50,7 +50,7 @@ textarea{height: 150px;}
             
           </form>
          <hr>
-          <h1>Este formulário php-html está finalizado porém está sem dominio,por isso pesso que encaminhe seu E-mail para 
+          <h1>Este formulário php-html está finalizado porém está sem dominio,por isso pesso que encaminhe sua mensagem para 
             o endereço  rhaonyferraz@hotmail.com 
           </h1>
 
