--- a/index3.html
+++ b/index3.html
@@ -33,6 +33,7 @@
             <ul type="disc"><b>
                  <li> JavaScript-HTML-Css.
                  <li> Git-Github.
+                 <li> Business Sales.
                  <li> Cibersegurança-Bootcamp Cisco-Cloud,Computing-Mikrotik.
                  <li> Gravity Stecks-Noda-Meta Verso.
                  <li> Photoshop-Canva.
