--- a/index4.html
+++ b/index4.html
@@ -31,6 +31,7 @@
               <li> Inglês fluente.
               <li> Espanhol intermediário.
               <li> Habilidades de comunicação.
+              <li> Habilidades comerciais.
               <li> Habilidades de trabalho em equipe.
               <li> Habilidades com vendas e investidores.
               <li> Habilidade com tecnologias.
