--- a/index2.html
+++ b/index2.html
@@ -24,14 +24,14 @@
 <main> 
     <article>
         <h1>
-        Gerente de Inovação, Marcelo Pasqua. 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
+        Gerente de Vendas/Inovação, Marcelo Pasqua. 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
         <p>
 <ul type="disc"><b>
-        <li> Gerenciamento de projetos blockchain NFT.
-        <li> Reuniões semanais com a diretoria.
+        <li> Gerenciamento de inovações.
+        <li> Reuniões semanais com diretoria,investidores/clientes.
         <li> Elaboração de apresentações para investidores.
         <li> Implementação de novos sistemas de cibersegurança.
-        <li> Desenvolvimento de websites,
+        <li> Desenvolvimento de websites/web2.0/3.0.
         criação de token. <i> <a href="https://cryptorig.com.br/" target="_blank"rel="nofollow">cryptorig.com 🔗 </a></i></b></p><br>
         
         <h1>
@@ -46,16 +46,16 @@
         <li> Análise de negócios.</b></p><br>
 
         <h1>
-        Analista de rede, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">textiluniao.com 🔗</i></a>
+        Analista de negócios, Textil União Ltda. 2015 - 2017 <i><a href="http://www.textiluniao.ind.br/" target="_blank"rel="nofollow">textiluniao.com 🔗</i></a>
     </h1>
         <p>
 <ul type="disc"><b>
-        <li> Gerenciamento de hardware e software.
-        <li> Reuniões semanais com a diretoria.
+        <li> Gerenciamento de sistemas.
+        <li> Reuniões semanais com a diretoria e clientes.
         <li> Implementação de novos sistemas.</b></p><br>
 
         <h1>
-        Estagiário, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">embreagemferraz.com 🔗</i></a></h1>
+        Auxiliar de vendas, Embreangens Ferraz Ltda 2012 - 2014 <i><a href="http://www.embreagemferraz.com.br//" target="_blank"rel="nofollow">embreagemferraz.com 🔗</i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de hardware e software.
