--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
         <p>
             <ul type="disc"><b>
                  <li> Engenharia da computação, Universidade UNIVESP 2021 (cursando).
-                 <li> Business English,Infinty School (Irlanda) 2018.
+                 <li> English Business, Infinty School (Irlanda) 2018.
                  <li> Inglês avançado, Infinity School (Irlanda) 2017-2019.</b></p><br>
         
         <h1>
