--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
 <main> 
     <article>
         <h1>
-        Gerente de Vendas/Inovação, Marcelo Pasqua. 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
+        Front-end developer, Marcelo Pasqua. 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
         <p>
 <ul type="disc"><b>
         <li> Gerenciamento de inovações.
