--- a/indexcv.html
+++ b/indexcv.html
@@ -24,7 +24,7 @@
 <main> 
          <article> 
             <section id="redes-cv">
-                <abbr title=""><a href="resume2/Currículo-pt-rf.pdf"target="_blank"rel="nofollow"><img src="img_logo/br2.png" alt=""></abbr><abbr title=""><a href="resume2/resume001.png"target="_blank"rel="nofollow"><img src="img_logo/usa2.png" alt=""></abbr>&nbsp&nbsp<abbr title=""><a href="resume2/resume-sp-1.png"target="_blank"rel="nofollow"><img src="img_logo/Sp2.png" alt=""></abbr>
+                <abbr title=""><a href="resume2/currículo-rhaony-br.pdf"target="_blank"rel="nofollow"><img src="img_logo/br2.png" alt=""></abbr><abbr title=""><a href="resume2/rhaony-resume-ing-p.pdf"target="_blank"rel="nofollow"><img src="img_logo/usa2.png" alt=""></abbr>&nbsp&nbsp<abbr title=""><a href="resume2/resume-sp-1.png"target="_blank"rel="nofollow"><img src="img_logo/Sp2.png" alt=""></abbr>
             </section>
             
          </article><hr>
