--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
         Front-end, Marcelo Pasqua. 2020-2022 <i><a href="https://marcelopasqua.com/" target="_blank"rel="nofollow" > marcelopasqua.com 🔗 </i></a></h1>
         <p>
 <ul type="disc"><b>
+        <li> Linguagens e tecnologias utilizadas HTML/CSS/JS/C#/.NET/SOLIDITY.
         <li> Gerenciamento de inovações.
         <li> Reuniões semanais com diretoria,investidores/clientes.
         <li> Elaboração de apresentações para investidores.
@@ -43,6 +44,7 @@
        Full-Stack , Bridge Trade -Irlanda. 2018 - 2021 <i><a href="https://bridgetrade.biz/" target="_blank"rel="nofollow">bridgetrade.com 🔗</i></a></h1>
         <p>
 <ul type="disc"><b>
+        <li> Linguagens e tecnologias utilizadas HTML/CSS/JS/C#/.NET/SOLIDITY.
         <li> Gerenciamento de fluxo de projetos.
         <li> Elaboração de apresentações para investidores.
         <li> Envio de remessas para o exterior.
