--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
         Especialização e Certificação</h1>
         <p>
             <ul type="disc"><b>
-                 <li> JavaScript-Node.Js-HTML-Css.
+                 <li> JavaScript-Node.Js-HTML-Css.C#-.NET.
                  <li> Git-Github.
                  <li> Business Sales.
                  <li> Cibersegurança-Bootcamp Cisco-Cloud,Computing-Mikrotik.
