--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  
 
     
-    <article>             <h1>  Rhaony Ferraz </h1><br>
+    <article>             <h1>  Rhaony Ferrazi </h1><br>
           <h4>                     
          
           <picture>
