--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <source media="(max-width: 850px )" srcset="imagens02/img-m.png" type="image/png">
             <img src="imagens02/img-g.png" alt="imagem flexível">  </picture></h4> <br>
           <h2>
-                Front-end com foco em processos complexos e desenvolvimento de soluções, desenvolvendo ferramentas e gerenciando projetos globalmente,
+                Gestor de equipes com foco em processos complexos e desenvolvimento de soluções, desenvolvendo ferramentas e gerenciando projetos globalmente,
                 fornecendo soluções técnicas e comerciais para a melhor experiência do cliente. Pontos fortes: trabalho em equipe, pensamento claro,
                 pró-atividade, habilidades de apresentação, excelentes habilidades de comunicação.</h2><br>
          </article><hr>
